Quite el isBlank(no me dejaba hacer el push) y deje solo el isEmpty usando trim, deberia hacer los mismo